# geodesic

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindDuckDB.cmake  FindZstd.cmake
docs/: index.html
src/: config.cpp  config.hpp  main.cpp  pipeline.cpp  pipeline.hpp
src/core/: genome_cache.cpp  genome_cache.hpp  logging.hpp  progress.hpp  subprocess.cpp  subprocess.hpp  types.hpp
src/core/geodesic/: diversity_threshold.cpp  geodesic.cpp  geodesic.hpp
src/core/similarity/: similarity_base.cpp  similarity_base.hpp  skani.cpp  skani.hpp
src/core/sketch/: minhash.cpp  minhash.hpp
src/db/: async_writer.hpp  db_manager.cpp  db_manager.hpp  embedding_store.cpp  embedding_store.hpp  genome_pack.cpp  genome_pack.hpp  operations.cpp  operations.hpp  schema.cpp  schema.hpp  sketch_store.cpp  sketch_store.hpp
src/io/: fasta_reader.cpp  fasta_reader.hpp  gz_reader.cpp  gz_reader.hpp  report_writer.cpp  report_writer.hpp  results_writer.cpp  results_writer.hpp  tsv_reader.cpp  tsv_reader.hpp
src/parallel/: taxon_processor.cpp  taxon_processor.hpp
tests/: CMakeLists.txt  test_main.cpp  test_sketch.cpp
tests/integration/: README.md  test_coverage_gate.sh  test_input.tsv
wiki/: ALGORITHM.md  Background-and-Motivation.md  Contamination.md  Home.md  _Sidebar.md
